<resources>
    <string name="app_name">Medications</string>
    <string name="listBtn">See list of medications</string>
    <string name="addBtn">Add a new medication</string>
    <string name="deleteBtn">Delete a medication</string>
    <string name="saveBtn">Save</string>
    <string name="doctorTv">Doctor\'s name</string>
    <string name="mednameTv">Medication name</string>
    <string name="timeTv">Time</string>
    <string name="medhints">amoxicillin, synthroid, etc.</string>
    <string name="docnamehint">Doctor\'s last name</string>
    <string name="timehint">time to take it</string>
    <string name="deleteOptionHint">medication name</string>
    <string name="deleteQuestion">Which medication do you want to delete?</string>
    <string name="sdeleteBtn">Delete</string>
    <string name="setAlarmBtn">Set Alarm</string>
</resources>